tests/baselines/reference/duplicatePropertyNames.errors.txt
==== tests/cases/compiler/duplicatePropertyNames.ts (10 errors) ====
    // duplicate property names are an error in all types
    
    interface Number {
        foo: string;
        foo: string;
        ~~~
!!! duplicatePropertyNames.ts(5,5): error TS2000: Duplicate identifier 'foo'.
    }
    
    interface String {
        foo(): string;
        foo(): string;
    }
    
    interface Array<T> {
        foo: T;
        foo: T;
        ~~~
!!! duplicatePropertyNames.ts(15,5): error TS2000: Duplicate identifier 'foo'.
    }
    
    class C {
        foo: string;
        foo: string;
        ~~~
!!! duplicatePropertyNames.ts(20,5): error TS2000: Duplicate identifier 'foo'.
    
        bar(x) { }
        bar(x) { }
        ~~~~~~~~~~
!!! duplicatePropertyNames.ts(23,5): error TS2237: Duplicate function implementation.
    
        baz = () => { }
        baz = () => { }
        ~~~
!!! duplicatePropertyNames.ts(26,5): error TS2000: Duplicate identifier 'baz'.
    }
    
    interface I {
        foo: string;
        foo: string;
        ~~~
!!! duplicatePropertyNames.ts(31,5): error TS2000: Duplicate identifier 'foo'.
    }
    
    var a: {
        foo: string;
        foo: string;
        ~~~
!!! duplicatePropertyNames.ts(36,5): error TS2000: Duplicate identifier 'foo'.
    
        bar: () => {};
        bar: () => {};
        ~~~
!!! duplicatePropertyNames.ts(39,5): error TS2000: Duplicate identifier 'bar'.
    }
    
    var b = {
        foo: '',
        foo: '',
        ~~~~~~~
!!! duplicatePropertyNames.ts(44,5): error TS2000: Duplicate identifier 'foo'.
        bar: () => { },
        bar: () => { }
        ~~~~~~~~~~~~~~
!!! duplicatePropertyNames.ts(46,5): error TS2000: Duplicate identifier 'bar'.
    }
    